- Add averie and kennedi first - Remove fb from Joyce - Fix index heroImage width - Shift stylist images down

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,7 +26,7 @@ body {
 
 /* ===== Main Content Styles ===== */
 #heroImgContainer {
-    margin: 0 4%;
+    margin-bottom: 2rem;
 }
 
 #heroImgContainer img{
@@ -118,7 +118,16 @@ body {
         margin-top: 10px; /* Adjusted for sticky header */
     }
 
-    #heroImgContainer,
+    #heroImgContainer {
+        /* margin: 2rem 2vw 2rem 2vw; Add vertical margin */
+        padding: 1rem 0;
+        min-height: 250px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+    }
+
     #heroImgContainer2 {
         margin: 2rem 2vw 2rem 2vw; /* Add vertical margin */
         padding: 1rem 0;
