--- a/src/css/meet-the-team.css
+++ b/src/css/meet-the-team.css
@@ -103,6 +103,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center 15%;
 }
 
 /* Name link styling */
